! fix #1825 various overflow issues with single string subject text - Linktree - infocenter - message cat header - message index Thanks to @scripple for the report

--- a/themes/default/css/index.css
+++ b/themes/default/css/index.css
@@ -1107,6 +1107,14 @@ a.bbc_link {
 	border: none;
 	white-space: nowrap;
 }
+.linktree:last-child {
+	max-width: 25em;
+}
+.linktree a {
+	display: block;
+	overflow: hidden;
+	text-overflow: ellipsis;
+}
 
 /* Nifty indicators. */
 .linktree:after {
@@ -1705,6 +1713,9 @@ dl.settings label {
 	padding: 2px 4px;
 	vertical-align: top;
 	text-align: left;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	max-width: 40em;
 }
 .recentpost {
 	width: 40%;
@@ -1792,6 +1803,13 @@ img.new_posts {
 #unread_header {
 	margin-top: 0.5em;
 }
+
+/* The header abover the posts */
+#forumposts .category_header {
+	overflow: hidden;
+	text-overflow: ellipsis;
+}
+
 /* The board description and who-is-viewing stuff. */
 #description_board {
 	margin: 10px 0 0 0;
@@ -1864,6 +1882,8 @@ img.new_posts {
 	line-height: 1.429em;
 	display: inline-block;
 	padding-right: 30px;
+	word-break: break-all;
+    word-wrap: break-word;
 }
 .topic_name h4 a {
 	font-weight: bold;
